Implement framework runtime convergence and relocation contracts